...
              </Text>
            </View>

            <View style={styles.form}>
              <TextInput
                ref={emailRef}
                testID="login-email"
                accessibilityLabel="Email input"
                autoFocus
                autoCapitalize="none"
                keyboardType="email-address"
                textContentType="none"
                autoComplete="off"
...
                onChangeText={setEmail}
                onSubmitEditing={() => passwordRef.current?.focus()}
                style={styles.input}
              />
              <TextInput
                ref={passwordRef}
                testID="login-password"
                accessibilityLabel="Password input"
                textContentType="none"
                autoComplete="off"
                returnKeyType="go"
                placeholder="Password"
                placeholderTextColor={colors.tabIconDefault}
...
